data/derived/sp14/progs/unify/prog1699.ml.out
Characters 303-304:
  else 0) , (addit / 10) :: x)
                            ^
Error: This expression has type int * int list
       but an expression was expected of type int list
